--- a/chart/Chart.yaml
+++ b/chart/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v2
-description: helm-external-secretie is abstrcting external secrets
+description: helm-external-secretie is abstracting external secrets
 type: application
 version: 0.1.1
 name: helm-external-secretie
