feat: templated approach

--- a/chart/templates/cluster-secret-store.yml
+++ b/chart/templates/cluster-secret-store.yml
@@ -15,4 +15,10 @@ spec:
         tokenSecretRef:
           name: vault-{{ $externalSecret.name }}-token
           key: token
+        kubernetes:
+          mountPath: kv
+          role: templated
+          serviceAccountRef:
+            name: {{ $externalSecret.name }}
+            namespace: {{ $externalSecret.namespace }}
 {{- end }}
