--- a/chart/templates/cluster-secret-store.yml
+++ b/chart/templates/cluster-secret-store.yml
@@ -13,7 +13,7 @@ spec:
       version: "v2"
       auth:
         kubernetes:
-          mountPath: kv
+          mountPath: kubernetes
           role: templated
           serviceAccountRef:
             name: {{ $externalSecret.name }}
